-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b08
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8230860 | 11.0.6-oracle | Mikael Vidstedt | P4 | Resolved | Fixed | b01 |
| JDK-8229908 | 11.0.5 | Mikael Vidstedt | P4 | Resolved | Fixed | team |
The code which generates the message for the IllegalArgumentException when defining a module with an disallowed package name is not allocating enough resource area space for the message.
Specifically, this code in modules.cpp (http://hg.openjdk.java.net/jdk/jdk/file/d02f1f4ff3a6/src/hotspot/share/classfile/modules.cpp#l338):
size_t pkg_len = strlen(package_name);
char* pkg_name = NEW_RESOURCE_ARRAY_IN_THREAD(THREAD, char, pkg_len);
strncpy(pkg_name, package_name, pkg_len);
StringUtils::replace_no_expand(pkg_name, "/", ".");
Specifically, this code in modules.cpp (http://hg.openjdk.java.net/jdk/jdk/file/d02f1f4ff3a6/src/hotspot/share/classfile/modules.cpp#l338):
size_t pkg_len = strlen(package_name);
char* pkg_name = NEW_RESOURCE_ARRAY_IN_THREAD(THREAD, char, pkg_len);
strncpy(pkg_name, package_name, pkg_len);
StringUtils::replace_no_expand(pkg_name, "/", ".");
- backported by
-
JDK-8229908 Incorrect exception message generation
-
- Resolved
-
-
JDK-8230860 Incorrect exception message generation
-
- Resolved
-
- relates to
-
JDK-8171855 Move package name transformations during module bootstrap into native code
-
- Resolved
-