8218581: Incorrect exception message generation

Reviewed-by: hseigel